added functions.php and add_theme_support

--- a/style.css
+++ b/style.css
@@ -13,6 +13,9 @@ body {
 .admin-bar{
   margin-top:32px;
 }
+header{
+  background-size: cover;
+}
 header nav {
   background: #eee;
   margin: 1em 0;
