--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
 }
 header{
   background-size: cover;
+  position: relative;
 }
 header nav {
   background: #eee;
@@ -31,13 +32,13 @@ header nav a {
   display: block;
   padding: .5em;
 }
-header nav .children{
+header nav .sub-menu{
   display: flex;
   flex-wrap:wrap;
   background-color:#ddd;
   font-size:1.2rem;
 }
-.header nav .children li{
+.header nav .sub-menu li{
   width:50%;
   min-width:200px;
 }
@@ -70,7 +71,7 @@ article {
    display:flex;
    flex-wrap: wrap;
  }
- header nav ul.children{
+ header nav ul.sub-menu{
   position:absolute;
   left:0;
   top:100%;
@@ -79,8 +80,8 @@ article {
   display:none;
   font-size: inherit;
 }
-header nav .children li, 
-header nav .children a{
+header nav .sub-menu li, 
+header nav .sub-menu a{
   display: block;
   width:auto;   
 }
@@ -104,4 +105,294 @@ header nav > ul > li:hover > ul{
   clear: both;
   text-align: center;
 }
+}
+
+
+
+
+/**
+ * Genericons from twentysixeen
+ */
+
+.menu-item-has-children a:after,
+.social-navigation a:before,
+.dropdown-toggle:after,
+.bypostauthor > article .fn:after,
+.comment-reply-title small a:before,
+.pagination .prev:before,
+.pagination .next:before,
+.pagination .nav-links:before,
+.pagination .nav-links:after,
+.search-submit:before {
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  display: inline-block;
+  font-family: "Genericons";
+  font-size: 16px;
+  font-style: normal;
+  font-variant: normal;
+  font-weight: normal;
+  line-height: 1;
+  speak: none;
+  text-align: center;
+  text-decoration: inherit;
+  text-transform: none;
+  vertical-align: top;
+}
+
+.social-navigation{
+  position:absolute;
+  top:0px;
+  right:0;
+}
+
+
+.social-navigation ul {
+  list-style: none;
+  margin: 0 0 -0.4375em;
+}
+
+.social-navigation li {
+  float: left;
+  margin: 0 0.4375em 0.4375em 0;
+}
+
+.social-navigation a {
+   color: black;
+  display: block;
+  height: 35px;
+  position: relative;
+  width: 35px;
+}
+
+.social-navigation a:before {
+  content: "\f415";
+  height: 33px;
+  line-height: 33px;
+  text-align: center;
+  width: 33px;
+}
+
+.social-navigation a:hover:before,
+.social-navigation a:focus:before {
+  color: #007acc;
+}
+
+.social-navigation a[href*="codepen.io"]:before {
+  content: "\f216";
+}
+
+.social-navigation a[href*="digg.com"]:before {
+  content: "\f221";
+}
+
+.social-navigation a[href*="dribbble.com"]:before {
+  content: "\f201";
+}
+
+.social-navigation a[href*="dropbox.com"]:before {
+  content: "\f225";
+}
+
+.social-navigation a[href*="facebook.com"]:before {
+  content: "\f203";
+}
+
+.social-navigation a[href*="flickr.com"]:before {
+  content: "\f211";
+}
+
+.social-navigation a[href*="foursquare.com"]:before {
+  content: "\f226";
+}
+
+.social-navigation a[href*="plus.google.com"]:before {
+  content: "\f206";
+}
+
+.social-navigation a[href*="github.com"]:before {
+  content: "\f200";
+}
+
+.social-navigation a[href*="instagram.com"]:before {
+  content: "\f215";
+}
+
+.social-navigation a[href*="linkedin.com"]:before {
+  content: "\f208";
+}
+
+.social-navigation a[href*="path.com"]:before {
+  content: "\f219";
+}
+
+.social-navigation a[href*="pinterest.com"]:before {
+  content: "\f210";
+}
+
+.social-navigation a[href*="getpocket.com"]:before {
+  content: "\f224";
+}
+
+.social-navigation a[href*="polldaddy.com"]:before {
+  content: "\f217";
+}
+
+.social-navigation a[href*="reddit.com"]:before {
+  content: "\f222";
+}
+
+.social-navigation a[href*="skype.com"]:before {
+  content: "\f220";
+}
+
+.social-navigation a[href*="stumbleupon.com"]:before {
+  content: "\f223";
+}
+
+.social-navigation a[href*="tumblr.com"]:before {
+  content: "\f214";
+}
+
+.social-navigation a[href*="twitter.com"]:before {
+  content: "\f202";
+}
+
+.social-navigation a[href*="vimeo.com"]:before {
+  content: "\f212";
+}
+
+.social-navigation a[href*="wordpress.com"]:before,
+.social-navigation a[href*="wordpress.org"]:before {
+  content: "\f205";
+}
+
+.social-navigation a[href*="youtube.com"]:before {
+  content: "\f213";
+}
+
+.social-navigation a[href^="mailto:"]:before {
+  content: "\f410";
+}
+
+.social-navigation a[href*="spotify.com"]:before {
+  content: "\f515";
+}
+
+.social-navigation a[href*="twitch.tv"]:before {
+  content: "\f516";
+}
+
+.social-navigation a[href$="/feed/"]:before {
+  content: "\f413";
+}
+
+
+/* Wordpress Core Styles (codex: CSS) */
+.alignnone {
+    margin: 5px 20px 20px 0;
+}
+
+.aligncenter,
+div.aligncenter {
+    display: block;
+    margin: 5px auto 5px auto;
+}
+
+.alignright {
+    float:right;
+    margin: 5px 0 20px 20px;
+}
+
+.alignleft {
+    float: left;
+    margin: 5px 20px 20px 0;
+}
+
+a img.alignright {
+    float: right;
+    margin: 5px 0 20px 20px;
+}
+
+a img.alignnone {
+    margin: 5px 20px 20px 0;
+}
+
+a img.alignleft {
+    float: left;
+    margin: 5px 20px 20px 0;
+}
+
+a img.aligncenter {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.wp-caption {
+    background: #fff;
+    border: 1px solid #f0f0f0;
+    max-width: 96%; /* Image does not overflow the content area */
+    padding: 5px 3px 10px;
+    text-align: center;
+}
+
+.wp-caption.alignnone {
+    margin: 5px 20px 20px 0;
+}
+
+.wp-caption.alignleft {
+    margin: 5px 20px 20px 0;
+}
+
+.wp-caption.alignright {
+    margin: 5px 0 20px 20px;
+}
+
+.wp-caption img {
+    border: 0 none;
+    height: auto;
+    margin: 0;
+    max-width: 98.5%;
+    padding: 0;
+    width: auto;
+}
+
+.wp-caption p.wp-caption-text {
+    font-size: 11px;
+    line-height: 17px;
+    margin: 0;
+    padding: 0 4px 5px;
+}
+
+/* Text meant only for screen readers. */
+.screen-reader-text {
+  border: 0;
+  clip: rect(1px, 1px, 1px, 1px);
+  clip-path: inset(50%);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute !important;
+  width: 1px;
+  word-wrap: normal !important; /* Many screen reader and browser combinations announce broken words as they would appear visually. */
+}
+
+.screen-reader-text:focus {
+  background-color: #eee;
+  clip: auto !important;
+  clip-path: none;
+  color: #444;
+  display: block;
+  font-size: 1em;
+  height: auto;
+  left: 5px;
+  line-height: normal;
+  padding: 15px 23px 14px;
+  text-decoration: none;
+  top: 5px;
+  width: auto;
+  z-index: 100000;
+  /* Above WP toolbar. */
 }
