--- a/style.css
+++ b/style.css
@@ -3,7 +3,9 @@ Theme Name: Strawberry Cookie
 Description: A simple starter theme for learning
 Author: Melissa Cabral
 License: GPLv3
+License URI: https://www.gnu.org/licenses/gpl-3.0.en.html
 Version: 0.1
+Text Domain: strawberry-cookie
 */
 
 body {
@@ -72,39 +74,46 @@ article {
    flex-wrap: wrap;
  }
  header nav ul.sub-menu{
-  position:absolute;
-  left:0;
-  top:100%;
-  background-color: #ddd;
-  min-width:200px;
-  display:none;
-  font-size: inherit;
-}
-header nav .sub-menu li, 
-header nav .sub-menu a{
-  display: block;
-  width:auto;   
-}
-header nav > ul > li:hover > ul{
-  display:block;
-}
-.content {
-  float: left;
-  width: 68%;
-}
-.page .content{
-  width:100%;
-  float:none;
-}
-.sidebar {
-  float: right;
-  width: 27%;
-}
-.footer {
-  border-top: solid 1px #ddd;
-  clear: both;
-  text-align: center;
-}
+    position:absolute;
+    left:0;
+    top:100%;
+    background-color: #ddd;
+    min-width:200px;
+    display:none;
+    font-size: inherit;
+  }
+  header nav .sub-menu li, 
+  header nav .sub-menu a{
+    display: block;
+    width:auto;   
+  }
+  header nav > ul > li:hover > ul{
+    display:block;
+  }
+  .content {
+    float: left;
+    width: 68%;
+  }
+  .page .content{
+    width:100%;
+    float:none;
+  }
+  .sidebar {
+    float: right;
+    width: 27%;
+  }
+  .footer {
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    border-top: solid 1px #ddd;
+    clear: both;
+  }
+  .footer .widget{
+    width:30%;
+    min-width: 300px;
+    padding:1em;
+  }
 }
 
 
@@ -114,16 +123,16 @@ header nav > ul > li:hover > ul{
  * Genericons from twentysixeen
  */
 
-.menu-item-has-children a:after,
-.social-navigation a:before,
-.dropdown-toggle:after,
-.bypostauthor > article .fn:after,
-.comment-reply-title small a:before,
-.pagination .prev:before,
-.pagination .next:before,
-.pagination .nav-links:before,
-.pagination .nav-links:after,
-.search-submit:before {
+ .menu-item-has-children a:after,
+ .social-navigation a:before,
+ .dropdown-toggle:after,
+ .bypostauthor > article .fn:after,
+ .comment-reply-title small a:before,
+ .pagination .prev:before,
+ .pagination .next:before,
+ .pagination .nav-links:before,
+ .pagination .nav-links:after,
+ .search-submit:before {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   display: inline-block;
@@ -158,11 +167,11 @@ header nav > ul > li:hover > ul{
 }
 
 .social-navigation a {
-   color: black;
-  display: block;
-  height: 35px;
-  position: relative;
-  width: 35px;
+ color: black;
+ display: block;
+ height: 35px;
+ position: relative;
+ width: 35px;
 }
 
 .social-navigation a:before {
@@ -290,79 +299,79 @@ header nav > ul > li:hover > ul{
 
 /* Wordpress Core Styles (codex: CSS) */
 .alignnone {
-    margin: 5px 20px 20px 0;
+  margin: 5px 20px 20px 0;
 }
 
 .aligncenter,
 div.aligncenter {
-    display: block;
-    margin: 5px auto 5px auto;
+  display: block;
+  margin: 5px auto 5px auto;
 }
 
 .alignright {
-    float:right;
-    margin: 5px 0 20px 20px;
+  float:right;
+  margin: 5px 0 20px 20px;
 }
 
 .alignleft {
-    float: left;
-    margin: 5px 20px 20px 0;
+  float: left;
+  margin: 5px 20px 20px 0;
 }
 
 a img.alignright {
-    float: right;
-    margin: 5px 0 20px 20px;
+  float: right;
+  margin: 5px 0 20px 20px;
 }
 
 a img.alignnone {
-    margin: 5px 20px 20px 0;
+  margin: 5px 20px 20px 0;
 }
 
 a img.alignleft {
-    float: left;
-    margin: 5px 20px 20px 0;
+  float: left;
+  margin: 5px 20px 20px 0;
 }
 
 a img.aligncenter {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .wp-caption {
-    background: #fff;
-    border: 1px solid #f0f0f0;
-    max-width: 96%; /* Image does not overflow the content area */
-    padding: 5px 3px 10px;
-    text-align: center;
+  background: #fff;
+  border: 1px solid #f0f0f0;
+  max-width: 96%; /* Image does not overflow the content area */
+  padding: 5px 3px 10px;
+  text-align: center;
 }
 
 .wp-caption.alignnone {
-    margin: 5px 20px 20px 0;
+  margin: 5px 20px 20px 0;
 }
 
 .wp-caption.alignleft {
-    margin: 5px 20px 20px 0;
+  margin: 5px 20px 20px 0;
 }
 
 .wp-caption.alignright {
-    margin: 5px 0 20px 20px;
+  margin: 5px 0 20px 20px;
 }
 
 .wp-caption img {
-    border: 0 none;
-    height: auto;
-    margin: 0;
-    max-width: 98.5%;
-    padding: 0;
-    width: auto;
+  border: 0 none;
+  height: auto;
+  margin: 0;
+  max-width: 98.5%;
+  padding: 0;
+  width: auto;
 }
 
 .wp-caption p.wp-caption-text {
-    font-size: 11px;
-    line-height: 17px;
-    margin: 0;
-    padding: 0 4px 5px;
+  font-size: 11px;
+  line-height: 17px;
+  margin: 0;
+  padding: 0 4px 5px;
 }
 
 /* Text meant only for screen readers. */
@@ -395,4 +404,14 @@ a img.aligncenter {
   width: auto;
   z-index: 100000;
   /* Above WP toolbar. */
+}
+
+/*theme check requirements*/
+.sticky{
+  border:solid 1px #bbb;
+  padding:1em;
+}
+
+.gallery-caption{
+
 }
