--- a/style.css
+++ b/style.css
@@ -8,410 +8,642 @@ Version: 0.1
 Text Domain: strawberry-cookie
 */
 
-body {
-  max-width: 60em;
-  margin: 0 auto;
-}
-.admin-bar{
-  margin-top:32px;
-}
-header{
-  background-size: cover;
-  position: relative;
-}
-header nav {
-  background: #eee;
-  margin: 1em 0;
-}
-header nav ul,
-header nav li {
-  list-style-type:none;
-  margin: 0;
-  padding: 0;
-  position: relative;
-}
-header nav a {
-  display: block;
-  padding: .5em;
-}
-header nav .sub-menu{
-  display: flex;
-  flex-wrap:wrap;
-  background-color:#ddd;
-  font-size:1.2rem;
-}
-.header nav .sub-menu li{
-  width:50%;
-  min-width:200px;
-}
-header nav a:hover {
-  background: #ddd;
-  text-decoration: none;
-}
-input[name=s]{
-  width:auto;
-}
-article {
-  margin-bottom: 3em;
-}
-.postmeta {
-  clear:both;
-  background: #eee;
-  margin:1em 0;
-  padding: .3em;
-  font-size: .7em;
-  color:#999;
-}
-.postmeta span:not(:last-child) {
-  border-right: solid 1px #ccc;
-  margin-right: .3em;
-  padding-right: .3em;
+
+
+
+
+/* == Variables (custom properties). these don't work in IE */
+:root{
+    --base-color:   #FCE190;
+    --light-text:   white;
+    --text-color:   #393939;
+    --accent-color: crimson;
+    --link-color:   #01699E;
+    --medium-color: #BBBBBB;
+    --light-color:  #F7F1DF;
+    --light-overlay: rgba(255,255,255,.3);
+    --dark-overlay:rgba(0,0,0,.3);
+
+    --shadow:2px 6px 6px rgba(0,0,0,.2);
 }
 
-@media screen and (min-width:600px) {
-  header nav ul {
-   display:flex;
-   flex-wrap: wrap;
- }
- header nav ul.sub-menu{
-    position:absolute;
-    left:0;
-    top:100%;
-    background-color: #ddd;
-    min-width:200px;
-    display:none;
-    font-size: inherit;
-  }
-  header nav .sub-menu li, 
-  header nav .sub-menu a{
-    display: block;
-    width:auto;   
-  }
-  header nav > ul > li:hover > ul{
-    display:block;
-  }
-  .content {
-    float: left;
-    width: 68%;
-  }
-  .page .content{
-    width:100%;
-    float:none;
-  }
-  .sidebar {
-    float: right;
-    width: 27%;
-  }
-  .footer {
-    display:flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    border-top: solid 1px #ddd;
-    clear: both;
-  }
-  .footer .widget{
-    width:30%;
-    min-width: 300px;
-    padding:1em;
-  }
+/* == Basic layout, mobile-first*/
+
+body{
+    margin:0;
+    color: var(--text-color);
+    
 }
+.wrapper {
+    min-height: 100vh;
+}
+img{
+    max-width:100%;
+    height:auto;
+}
+/* == Header */
+.header {
+    background: var(--base-color);  
+    padding:3% 3% 0;  
+    text-align:center;
+}
+
+.header h1 a{
+    color:inherit;
+}
+
+/*==main navigation menu*/
+.header .main-menu {
+    background: var(--light-overlay);  
+}
+.header .main-menu > li,
+.header .search-form{
+    padding:.5rem;
+}
+.header .search-form label{
+    padding:0;
+    margin:0;
+}
+.header .main-menu ul,
+.header .main-menu li {
+    list-style-type:none;
+    margin: 0;
+    padding: 0;
+    position: relative;
+    text-align: left;
+}
+.header .main-menu a {
+    display: block;
+    padding: .5em;
+}
+.header .main-menu .sub-menu{
+    display: none;
+    background-color:var(--light-color);
+    box-shadow: var(--shadow);
+}
+
+.header .main-menu a:hover {
+    background: var(--light-color);
+    text-decoration: none;
+}
+/*==social icons menu layout*/
+.social-navigation ul {
+    list-style: none;
+    margin: 0 0 -0.4375em;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.social-navigation li {
+    margin: 0 0.4375em 0.4375em 0;
+}
+
+
+
+/*Search bar*/
+.search-form {
+    display: flex;
+    justify-content: center;
+    min-width: 320px;    
+    margin:0;
+    background-color: var(--light-overlay);
+    
+}
+.search-form input{
+    margin:0 .25em;
+    background-color: white;
+    
+}
+.search-form input[type=search]{
+    width:100%;
+}
+.search-form input[type=search]:focus{
+    background-color: rgba(255,255,255,.8);
+    color:black;
+}
+
+
+/* == Main Content Area*/
+.content{
+    padding: 1em;
+    max-width:60em;
+    margin:0 auto;
+}
+.content .hentry{
+    margin:3em 0;
+}
+
+/*==post content*/
+.postmeta {
+    clear:both;
+    border-top:solid 3px var(--base-color);
+    margin:1em 0;
+    padding: .5em;
+    font-size: .8em;
+    
+}
+.postmeta span:not(:last-child) {
+    border-right: solid 1px var(--medium-color);
+    margin-right: .3em;
+    padding-right: .3em;
+}
+
+
+
+/* == Sidebar */
+.sidebar{
+    padding:1em;
+    font-size:90%;
+ 
+}
+.sidebar ul{
+    list-style-type: none;
+    padding:0;
+}
+.sidebar .widget{
+    max-width:20em;
+    margin:  3em 0;
+}
+.page .sidebar .widget{
+    max-width: none;
+}
+
+/* == Footer*/
+.footer {
+    background: var(--light-color);
+    padding:1em;
+  
+}
+
+
+/* ==Milligram recolor */
+a{
+    color:var(--link-color);
+}
+.button, button, input[type='button'], input[type='reset'], input[type='submit']{
+    background-color:var(--accent-color);
+    border-color:var(--accent-color);
+    
+}
+.button.button-outline{
+    color:var(--accent-color);
+}
+pre{
+    border-color:var(--accent-color);
+}
+input[type='email']:focus, input[type='number']:focus, input[type='password']:focus, input[type='search']:focus, input[type='tel']:focus, input[type='text']:focus, input[type='url']:focus, textarea:focus, select:focus{
+    border-color:var(--accent-color);
+}
+/* == CSS Grid Layout Breakpoints: check for browsers that support grid */
+@supports (grid-area: auto) {
+    .wrapper {
+        display: grid;
+        grid-template-areas:    "header" 
+        "content" 
+        "sidebar" 
+        "footer";
+    }
+    .header {
+        grid-area: header;
+    }
+    .content {
+        grid-area: content;
+    }
+    .sidebar {
+        grid-area: sidebar;
+    }
+    .footer {
+        grid-area: footer;
+    }
+    /* == header grid */
+    .header{
+        display: grid;
+        grid-template-areas:    
+        "branding" 
+        "navigation"
+        "search"
+        "social";
+    }
+    .header .branding{
+        grid-area:branding;
+
+    }
+    .header .main-menu{
+        grid-area:navigation;
+    }
+    .header .search-form{
+        grid-area: search;
+    }
+    .header .social-navigation{
+        grid-area: social;
+    }
+    
+    @media screen and (min-width: 700px) {
+        /*2-column layout on most screens*/
+        .wrapper {
+            grid-template-columns: 2fr  1fr;
+            
+            grid-template-areas:    
+            "header     header"
+            "content    sidebar"
+            "footer     footer";
+        }
+        /*1 column layout on static pages and portfolio pieces*/
+        .page .wrapper,
+        .post-type-archive-work .wrapper,
+        .tax-work_category .wrapper{ 
+            grid-template-columns: 1fr;
+            
+            grid-template-areas:    
+            "header"
+            "content"
+            "sidebar"
+            "footer";
+        }
+
+        .header-branding{
+            text-align: left;
+        }
+        .social-navigation{
+            text-align:right;
+        }
+        .social-navigation ul{
+           justify-content: flex-end;
+            
+        }
+
+        .header .main-menu ul {
+            display:flex;
+            flex-wrap: wrap;
+        }
+        .header .main-menu ul.sub-menu{
+            position:absolute;
+            left:0;
+            top:80%;
+
+            min-width:200px;
+            display:none;
+            font-size: inherit;
+        }
+        .header .main-menu .sub-menu li, 
+        .header .main-menu .sub-menu a{
+            display: block;
+            width:auto;   
+        }
+        .header .main-menu > ul > li:hover > ul{
+            display:block;
+        }
+
+        .main-menu{
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: flex-start;
+        }
+        .search-form input[type=search]{
+            min-width: 200px;
+            width:auto;
+        }
+
+        .footer {
+            display:flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            clear: both;
+        }
+        .footer .widget{
+            width:30%;
+            min-width: 300px;
+            padding:1em;
+        }
+    }
+    
+}
+
+@media screen and (min-width: 900px) {
+    .header{
+        grid-template-columns: 2fr  1fr;
+
+        grid-template-areas:   
+        "branding     social"
+        "navigation    search";
+    }
+}
+
 
 
 
 
 /**
- * Genericons from twentysixeen
- */
+* Genericons from twentysixeen
+*/
 
- .menu-item-has-children a:after,
- .social-navigation a:before,
- .dropdown-toggle:after,
- .bypostauthor > article .fn:after,
- .comment-reply-title small a:before,
- .pagination .prev:before,
- .pagination .next:before,
- .pagination .nav-links:before,
- .pagination .nav-links:after,
- .search-submit:before {
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-font-smoothing: antialiased;
-  display: inline-block;
-  font-family: "Genericons";
-  font-size: 16px;
-  font-style: normal;
-  font-variant: normal;
-  font-weight: normal;
-  line-height: 1;
-  speak: none;
-  text-align: center;
-  text-decoration: inherit;
-  text-transform: none;
-  vertical-align: top;
+
+.social-navigation a:before{
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    display: inline-block;
+    font-family: "Genericons";
+    font-size: 16px;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: normal;
+    line-height: 1;
+    speak: none;
+    text-align: center;
+    text-decoration: inherit;
+    text-transform: none;
+    vertical-align: top;
 }
 
-.social-navigation{
-  position:absolute;
-  top:0px;
-  right:0;
-}
-
-
-.social-navigation ul {
-  list-style: none;
-  margin: 0 0 -0.4375em;
-}
-
-.social-navigation li {
-  float: left;
-  margin: 0 0.4375em 0.4375em 0;
-}
 
 .social-navigation a {
- color: black;
- display: block;
- height: 35px;
- position: relative;
- width: 35px;
+    color: black;
+    display: block;
+    height: 35px;
+    position: relative;
+    width: 35px;
 }
 
 .social-navigation a:before {
-  content: "\f415";
-  height: 33px;
-  line-height: 33px;
-  text-align: center;
-  width: 33px;
+    content: "\f415";
+    height: 33px;
+    line-height: 33px;
+    text-align: center;
+    width: 33px;
 }
 
 .social-navigation a:hover:before,
 .social-navigation a:focus:before {
-  color: #007acc;
+    color: #007acc;
 }
 
 .social-navigation a[href*="codepen.io"]:before {
-  content: "\f216";
+    content: "\f216";
 }
 
 .social-navigation a[href*="digg.com"]:before {
-  content: "\f221";
+    content: "\f221";
 }
 
 .social-navigation a[href*="dribbble.com"]:before {
-  content: "\f201";
+    content: "\f201";
 }
 
 .social-navigation a[href*="dropbox.com"]:before {
-  content: "\f225";
+    content: "\f225";
 }
 
 .social-navigation a[href*="facebook.com"]:before {
-  content: "\f203";
+    content: "\f203";
 }
 
 .social-navigation a[href*="flickr.com"]:before {
-  content: "\f211";
+    content: "\f211";
 }
 
 .social-navigation a[href*="foursquare.com"]:before {
-  content: "\f226";
+    content: "\f226";
 }
 
 .social-navigation a[href*="plus.google.com"]:before {
-  content: "\f206";
+    content: "\f206";
 }
 
 .social-navigation a[href*="github.com"]:before {
-  content: "\f200";
+    content: "\f200";
 }
 
 .social-navigation a[href*="instagram.com"]:before {
-  content: "\f215";
+    content: "\f215";
 }
 
 .social-navigation a[href*="linkedin.com"]:before {
-  content: "\f208";
+    content: "\f208";
 }
 
 .social-navigation a[href*="path.com"]:before {
-  content: "\f219";
+    content: "\f219";
 }
 
 .social-navigation a[href*="pinterest.com"]:before {
-  content: "\f210";
+    content: "\f210";
 }
 
 .social-navigation a[href*="getpocket.com"]:before {
-  content: "\f224";
+    content: "\f224";
 }
 
 .social-navigation a[href*="polldaddy.com"]:before {
-  content: "\f217";
+    content: "\f217";
 }
 
 .social-navigation a[href*="reddit.com"]:before {
-  content: "\f222";
+    content: "\f222";
 }
 
 .social-navigation a[href*="skype.com"]:before {
-  content: "\f220";
+    content: "\f220";
 }
 
 .social-navigation a[href*="stumbleupon.com"]:before {
-  content: "\f223";
+    content: "\f223";
 }
 
 .social-navigation a[href*="tumblr.com"]:before {
-  content: "\f214";
+    content: "\f214";
 }
 
 .social-navigation a[href*="twitter.com"]:before {
-  content: "\f202";
+    content: "\f202";
 }
 
 .social-navigation a[href*="vimeo.com"]:before {
-  content: "\f212";
+    content: "\f212";
 }
 
 .social-navigation a[href*="wordpress.com"]:before,
 .social-navigation a[href*="wordpress.org"]:before {
-  content: "\f205";
+    content: "\f205";
 }
 
 .social-navigation a[href*="youtube.com"]:before {
-  content: "\f213";
+    content: "\f213";
 }
 
 .social-navigation a[href^="mailto:"]:before {
-  content: "\f410";
+    content: "\f410";
 }
 
 .social-navigation a[href*="spotify.com"]:before {
-  content: "\f515";
+    content: "\f515";
 }
 
 .social-navigation a[href*="twitch.tv"]:before {
-  content: "\f516";
+    content: "\f516";
 }
 
 .social-navigation a[href$="/feed/"]:before {
-  content: "\f413";
+    content: "\f413";
 }
 
 
 /* Wordpress Core Styles (codex: CSS) */
 .alignnone {
-  margin: 5px 20px 20px 0;
+    margin: 5px 20px 20px 0;
 }
 
 .aligncenter,
 div.aligncenter {
-  display: block;
-  margin: 5px auto 5px auto;
+    display: block;
+    margin: 5px auto 5px auto;
 }
 
 .alignright {
-  float:right;
-  margin: 5px 0 20px 20px;
+    float:right;
+    margin: 5px 0 20px 20px;
 }
 
 .alignleft {
-  float: left;
-  margin: 5px 20px 20px 0;
+    float: left;
+    margin: 5px 20px 20px 0;
 }
 
 a img.alignright {
-  float: right;
-  margin: 5px 0 20px 20px;
+    float: right;
+    margin: 5px 0 20px 20px;
 }
 
 a img.alignnone {
-  margin: 5px 20px 20px 0;
+    margin: 5px 20px 20px 0;
 }
 
 a img.alignleft {
-  float: left;
-  margin: 5px 20px 20px 0;
+    float: left;
+    margin: 5px 20px 20px 0;
 }
 
 a img.aligncenter {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .wp-caption {
-  background: #fff;
-  border: 1px solid #f0f0f0;
-  max-width: 96%; /* Image does not overflow the content area */
-  padding: 5px 3px 10px;
-  text-align: center;
+    background: #fff;
+    border: 1px solid #f0f0f0;
+    max-width: 96%; /* Image does not overflow the content area */
+    padding: 5px 3px 10px;
+    text-align: center;
 }
 
 .wp-caption.alignnone {
-  margin: 5px 20px 20px 0;
+    margin: 5px 20px 20px 0;
 }
 
 .wp-caption.alignleft {
-  margin: 5px 20px 20px 0;
+    margin: 5px 20px 20px 0;
 }
 
 .wp-caption.alignright {
-  margin: 5px 0 20px 20px;
+    margin: 5px 0 20px 20px;
 }
 
 .wp-caption img {
-  border: 0 none;
-  height: auto;
-  margin: 0;
-  max-width: 98.5%;
-  padding: 0;
-  width: auto;
+    border: 0 none;
+    height: auto;
+    margin: 0;
+    max-width: 98.5%;
+    padding: 0;
+    width: auto;
 }
 
 .wp-caption p.wp-caption-text {
-  font-size: 11px;
-  line-height: 17px;
-  margin: 0;
-  padding: 0 4px 5px;
+    font-size: 11px;
+    line-height: 17px;
+    margin: 0;
+    padding: 0 4px 5px;
 }
 
 /* Text meant only for screen readers. */
 .screen-reader-text {
-  border: 0;
-  clip: rect(1px, 1px, 1px, 1px);
-  clip-path: inset(50%);
-  height: 1px;
-  margin: -1px;
-  overflow: hidden;
-  padding: 0;
-  position: absolute !important;
-  width: 1px;
-  word-wrap: normal !important; /* Many screen reader and browser combinations announce broken words as they would appear visually. */
+    border: 0;
+    clip: rect(1px, 1px, 1px, 1px);
+    clip-path: inset(50%);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute !important;
+    width: 1px;
+    word-wrap: normal !important; /* Many screen reader and browser combinations announce broken words as they would appear visually. */
 }
 
 .screen-reader-text:focus {
-  background-color: #eee;
-  clip: auto !important;
-  clip-path: none;
-  color: #444;
-  display: block;
-  font-size: 1em;
-  height: auto;
-  left: 5px;
-  line-height: normal;
-  padding: 15px 23px 14px;
-  text-decoration: none;
-  top: 5px;
-  width: auto;
-  z-index: 100000;
-  /* Above WP toolbar. */
+    background-color: var(--light-color);
+    clip: auto !important;
+    clip-path: none;
+    color: var(--text-color);
+    display: block;
+    font-size: 1em;
+    height: auto;
+    left: 5px;
+    line-height: normal;
+    padding: 15px 23px 14px;
+    text-decoration: none;
+    top: 5px;
+    width: auto;
+    z-index: 100000;
+    /* Above WP toolbar. */
 }
 
 /*theme check requirements*/
 .sticky{
-  border:solid 1px #bbb;
-  padding:1em;
+    border:solid 1px var(--base-color);
+    padding:1em;
 }
 
 .gallery-caption{
+    font-size: 90%;
+}
 
+/*taxonomy archive demo - current class*/
+.current-cat a{
+    color:black;
+}
+
+/*Galleries*/
+.gallery{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+/*==Pagination*/
+.pagination{
+    background-color:var(--light-color);
+    display: flex;
+    flex-wrap: wrap;
+    font-family: calibri;
+}
+.pagination a{
+display: block;
+}
+.pagination a[rel=next], 
+.pagination a[rel=prev]{
+    width:50%;
+    padding:2em;
+}
+.pagination a:hover
+{
+   background-color: var(--accent-color);
+   color:white;
+}
+
+/*==comments*/
+.comments{
+    margin:3em 0;
+}
+.comments ol{
+    list-style-type: none;
 }
